--- a/mta.yaml
+++ b/mta.yaml
@@ -1,3 +1,19 @@
 ID: IBM2
 _schema-version: '2.1'
 version: 0.0.1
+
+modules:
+ - name: HDB
+   type: hdb
+   path: HDB
+   requires:
+    - name: hdi_HDB
+
+resources:
+ - name: hdi_HDB
+   parameters:
+      config:
+         schema: SCHEMA1
+   properties:
+      hdi-container-name: ${service-name}
+   type: com.sap.xs.hdi-container
